k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: go-simple-app
  name: go-simple-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-simple-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: go-simple-app
    spec:
      containers:
      - image: acehanks/go-simple-app:v1
        name: go-simple-app
        resources: {}
        livenessProbe:
          httpGet:
            path: /
            port: 9002
          initialDelaySeconds: 15
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 9002
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3
status: {}
